--- a/problems_and_solutions_app/MainWindow.xaml
+++ b/problems_and_solutions_app/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:problems_and_solutions_app"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="800"
+        WindowStartupLocation="CenterScreen">
     <Grid>
-
+        <Frame Content="{Binding CurrentPage}" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
